test/src/e2e_vm_tests/test_programs/should_fail/unknown_enum_variant/src/main.sw
script;

enum MyEnum {
    A: (),
    B: (),
}

fn main() {
    let e = MyEnum::C;
}

